--- a/src/components/styles/todo.css
+++ b/src/components/styles/todo.css
@@ -2,6 +2,7 @@
   width: 100vw;
   height: 100vh;
   background-color: #78c2c4;
+  font-family: Arial, sans-serif, LiHei Pro, Microsoft JhengHei;
 }
 
 .content {
