--- a/src/components/styles/todo.scss
+++ b/src/components/styles/todo.scss
@@ -47,6 +47,7 @@ $fontSize: (
   width: 100vw;
   height: 100vh;
   background-color: $color;
+  font-family: Arial, sans-serif, LiHei Pro, Microsoft JhengHei;
 }
 
 .content {
